localization, better error handling

--- a/plugins/EntryFileDrop/tmpl/suggested_tags.tmpl
+++ b/plugins/EntryFileDrop/tmpl/suggested_tags.tmpl
@@ -1,4 +1,4 @@
-<mtapp:setting id="suggested_tags" label="Entry File Drop Plugin"
+<mtapp:setting id="suggested_tags" label="<__trans phrase="Suggested tag list">"
     hint="<__trans phrase="Enter the tags to be suggested">" show_hint=1>
     <input type="text" name="suggested_tags" id="suggested_tags"
         value="<mt:Var name="suggested_tags">" />
