--- a/plugins/EntryFileDrop/tmpl/suggested_tags.tmpl
+++ b/plugins/EntryFileDrop/tmpl/suggested_tags.tmpl
@@ -4,7 +4,7 @@
         value="<mt:Var name="suggested_tags" escape="html">" />
 </mtapp:setting>
 <mtapp:setting id="default_directory" label="<__trans phrase="Default directory">"
-     hint="<__trans phrase="Enter the directory for drop-uploaded files. Can use MT template, i.e. &lt;mt:Date format='%Y/%m/%d'&gt;.">" show_hint=1>
+     hint="<__trans phrase="Enter the directory for drop-uploaded files. Can use MT template, i.e. [_1]." params="&lt;mt:Date format='%Y/%m/%d'&gt;">" show_hint=1>
      <input type="text" name="default_directory" id="default_directory"
          value="<mt:Var name="default_directory" escape="html">" />
 </mtapp:setting>
